You can look unlimited graphics like tan better with some zoom Versioning of project

--- a/grapher.cbp
+++ b/grapher.cbp
@@ -159,6 +159,7 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="main.cpp" />
+		<Unit filename="version.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
